# pynetphorest

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  NetworKIN.py  NetworKIN_v1.py  README.md  Snakefile  UniprotIDsToEnsembl74.py  config.yaml  likelihood.py  merge_datasets.py  pyproject.toml  sample.fas  sweep_thresh.py  test.fa  test.tsv  uniprot.sh
.github/workflows/: publish.yml
NetPhorest_human_2.1/: builder.py  netphorest.py  netphorest_predict.py  test.fa
NetworKIN_release3.0/: NetworKIN.py  likelihood.py
NetworKIN_release3.0/data/: string.py
data/: proteins.fasta  proteins_union.txt  sample.fas
data/mapped_ids/: idmap.tsv
data/ptmcode2/: between_counts.txt  within_counts.txt
fastas/: ABL1.fasta  ACT.fasta  AKT1.fasta  APC.fasta  ARC205.fasta  BCR.fasta  CBL.fasta  CRK.fasta  CRKL.fasta  CSNK2A1.fasta  CTNNB1.fasta  CTNND1.fasta  DSP.fasta  EGFR.fasta  ERBB2.fasta  FRAP1.fasta  FYN.fasta  HSP90AA1.fasta  HSPA8.fasta  IRS1.fasta  ITGB4.fasta  LMNA.fasta  MDC1.fasta  PIK3R1.fasta  POLR2.fasta  PRKCA.fasta  PRKCD.fasta  PTK2B.fasta  RAF1.fasta  RANBP2.fasta  SFRS1.fasta  SMARCA4.fasta  SOS1.fasta  SRC.fasta  STAT3.fasta  TP53.fasta  YWHAB.fasta  YWHAG.fasta  YWHAQ.fasta
scripts/: build_C_from_ptmcode2.py  fit_egfr_coupling_compare.py  fit_network_protein.py  fit_network_protein_pymoo.py  fit_timeseries.py  param_inspect.py  print_params.py
src/pynetphorest/: __init__.py  cli.py  core.py  crosstalk.py  evaluate.py  model_thresh.py  pynetphorest.py
src/pynetphorest/build_json_db/: builder.py  json_to_sqlite.py
src/pynetworkin/: builder.py  netphorest.py  netphorest_core.py  netphorest_predict.py
src/pynetworkin/build_json_db/: json_to_sqlite.py
src/pynetworkin/netphorest_atlas/: __init__.py  models.py
