[project]
name = "pynetphorest"
version = "0.1.0"
description = """
Modern, extensible Python toolkit for kinase–substrate and phosphorylation-crosstalk analysis. Rebuilds the NetPhorest/NetworKIN logic in pure Python, adds causal writer→reader predictions, ML models trained on PTMcode2, whole-proteome scoring, and Snakemake workflows. Designed for phosphoproteomics, systems biology, and large-scale signaling reconstruction.
"""
summary = "A modern, extensible kinase–substrate and phospho-crosstalk scoring engine built on pure Python."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" },
]

dependencies = [
  "joblib>=1.5.2",
  "matplotlib>=3.10.7",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.7.2",
  "snakemake>=7.32.4",
  "tqdm>=4.67.1",
  "typer>=0.12,<1.0",
]

keywords = [
  "netphorest",
  "kinase",
  "phosphorylation",
  "phosphoproteomics",
  "motif-scoring",
  "bioinformatics",
  "systems-biology",
  "machine-learning",
  "ptmcode",
  "crosstalk"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/bibymaths/pynetphorest"
Issues = "https://github.com/bibymaths/pynetphorest/issues"

[project.scripts]
pynetphorest = "pynetphorest.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ipykernel>=6.29.0",
]